# ezbybit

./: LICENSE  README.md  pyproject.toml
examples/: basic.py
src/ezbybit/: __init__.py  cli.py  client.py
