[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezbybit"
version = "0.1.1"
description = "Small convenience wrapper for Bybit spot market orders."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "rhcproc" },
]
keywords = ["bybit", "crypto", "trading", "pybit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pybit>=5.16.0",
]

[project.urls]
Homepage = "https://github.com/rhcproc/ezbybit"
Repository = "https://github.com/rhcproc/ezbybit"
Issues = "https://github.com/rhcproc/ezbybit/issues"

[project.scripts]
ezbybit = "ezbybit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
